--- a/src/components/Heading.module.css
+++ b/src/components/Heading.module.css
@@ -1,3 +1,7 @@
 .heading {
-    background: brown;
+    margin: 3.2rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
